fix rename of imap folder to non-ascii name, r/sr=neil, bug 549220