mailnews/imap/test/unit/test_mailboxes.js
@@ -1,6 +1,11 @@
 // This file tests the mailbox handling of IMAP.
 
 var gServer, gLocalServer;
+var gCurTestNum;
+var rootFolder;
+
+const gIMAPService = Cc["@mozilla.org/messenger/imapservice;1"]
+                       .getService(Ci.nsIImapService);
 
 function run_test() {
   var daemon = new imapDaemon();
@@ -10,26 +15,51 @@ function run_test() {
 
   gLocalServer = createLocalIMAPServer();
 
+  // The server doesn't support more than one connection
+  let prefBranch = Cc["@mozilla.org/preferences-service;1"]
+                     .getService(Ci.nsIPrefBranch);
+  prefBranch.setIntPref("mail.server.server1.max_cached_connections", 1);
+  // Make sure no biff notifications happen
+  prefBranch.setBoolPref("mail.biff.play_sound", false);
+  prefBranch.setBoolPref("mail.biff.show_alert", false);
+  prefBranch.setBoolPref("mail.biff.show_tray_icon", false);
+  prefBranch.setBoolPref("mail.biff.animate_dock_icon", false);
+  // We aren't interested in downloading messages automatically
+  prefBranch.setBoolPref("mail.server.server1.download_on_biff", false);
+
   // Get the server list...
   gLocalServer.performExpand(null);
   gServer.performTest("SUBSCRIBE");
 
-  var rootFolder = gLocalServer.rootFolder;
-  // Check that we've subscribed to the boxes returned by LSUB. We also get
-  // checking of proper i18n in mailboxes for free here.
-  do_check_true(rootFolder.containsChildNamed("Inbox"));
-  do_check_true(rootFolder.containsChildNamed("I18N box\u00E1"));
-  // This is not a subscribed box, so we shouldn't be subscribing to it.
-  do_check_false(rootFolder.containsChildNamed("Unsubscribed box"));
-
-  // TODO: RFC 2342 says we should stick Trash in the personal namespace, but
-  // we put it in the empty namespace. So we can't test namespace support in
-  // this regard because we'd fail...
-
   do_test_pending();
 
-  do_timeout(1000, endTest);
+  doTest(1);
 }
+
+const gTestArray =
+[
+  function checkDiscovery() {
+    rootFolder = gLocalServer.rootFolder;
+    // Check that we've subscribed to the boxes returned by LSUB. We also get
+    // checking of proper i18n in mailboxes for free here.
+    do_check_true(rootFolder.containsChildNamed("Inbox"));
+    do_check_true(rootFolder.containsChildNamed("I18N box\u00E1"));
+    // This is not a subscribed box, so we shouldn't be subscribing to it.
+    do_check_false(rootFolder.containsChildNamed("Unsubscribed box"));
+
+    let i18nChild = rootFolder.getChildNamed("I18N box\u00E1");
+    let uiThread =   Cc["@mozilla.org/thread-manager;1"]
+                        .getService(Ci.nsIThreadManager).mainThread;
+
+    gIMAPService.renameLeaf(uiThread, i18nChild, "test \u00E4", UrlListener, null);
+  },
+  function checkRename() {
+    do_check_true(rootFolder.containsChildNamed("test \u00E4"));
+    let newChild = rootFolder.getChildNamed("test \u00E4").
+                   QueryInterface(Ci.nsIMsgImapMailFolder);
+    newChild.updateFolderWithListener(null, UrlListener);
+  },
+];
 
 function endTest()
 {
@@ -41,3 +71,48 @@ function endTest()
 
   do_test_finished();
 }
+function doTest(test)
+{
+  if (test <= gTestArray.length)
+  {
+    dump("Doing test " + test + "\n");
+    gCurTestNum = test;
+
+    var testFn = gTestArray[test-1];
+    // Set a limit of 10 seconds; if the notifications haven't arrived by then there's a problem.
+    do_timeout(10000, function(){
+        if (gCurTestNum == test) 
+          do_throw("Notifications not received in 10000 ms for operation " + testFn.name + 
+            ", current status is " + gCurrStatus);
+        }
+      );
+    try {
+    testFn();
+    } catch(ex) {do_throw(ex);}
+  }
+  else
+  {
+    // Cleanup, null out everything, close all cached connections and stop the
+    // server
+    gRootFolder = null;
+    gIMAPInbox = null;
+    gMsgImapInboxFolder = null;
+    gIMAPTrashFolder = null;
+    do_timeout_function(1000, endTest);
+  }
+}
+
+var UrlListener = 
+{
+  OnStartRunningUrl: function(url) { },
+
+  OnStopRunningUrl: function (aUrl, aExitCode) {
+    // Check: message successfully copied.
+    do_check_eq(aExitCode, 0);
+    // Ugly hack: make sure we don't get stuck in a JS->C++->JS->C++... call stack
+    // This can happen with a bunch of synchronous functions grouped together, and
+    // can even cause tests to fail because they're still waiting for the listener
+    // to return
+    do_timeout(0, function(){doTest(++gCurTestNum)});
+  }
+};
